--- a/PageDataExtractor/packages.config
+++ b/PageDataExtractor/packages.config
@@ -1,6 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="AngleSharp" version="0.9.10" targetFramework="net461" />
   <package id="HtmlAgilityPack" version="1.8.11" targetFramework="net461" />
   <package id="HtmlAgilityPack.CssSelectors" version="1.0.2" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="12.0.1" targetFramework="net461" />
+  <package id="PhantomJS" version="2.1.1" targetFramework="net461" />
+  <package id="Selenium.Chrome.WebDriver" version="2.45" targetFramework="net461" />
+  <package id="Selenium.PhantomJS.WebDriver" version="2.1.1" targetFramework="net461" />
+  <package id="Selenium.WebDriver" version="3.141.0" targetFramework="net461" />
+  <package id="WebDriverManager" version="2.2.7" targetFramework="net461" />
 </packages>
